# NodeJS/src/routes/user.route.js
@@ -1,5 +1,6 @@
 import express from "express";
-import { userReviewPreview } from "../controllers/user.controller.js";
+import { userMissionOnProgress, userReviewPreview } from "../controllers/user.controller.js";
 import expressAsyncHandler from "express-async-handler";
 export const userRouter=express.Router({mergeParams:true});
 userRouter.get('/:userId/reviews',expressAsyncHandler(userReviewPreview));
+userRouter.get('/:userId/missions/:status',expressAsyncHandler(userMissionOnProgress));
