# NodeJS/swagger/user.swagger.yaml
@@ -1,4 +1,3 @@
-
 paths:
   /users/{userId}/reviews:
     get:
@@ -98,3 +97,111 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  
+  /users/{userId}/missions/{status}:
+    get:
+      tags:
+        - User
+      summary: 유저 별 진행중인 미션 조회 로직
+      parameters:
+        - name: userId
+          in: path
+          schema:
+            type: integer
+          required: true
+        - name: status
+          in: path
+          schema:
+            type: string
+          required: true
+        - name: memberMissionId
+          in: query
+          required: false
+          schema:
+            properties:
+              reviewId:
+                type: integer
+        - name: paging
+          in: query
+          required: true
+          schema:
+            properties:
+              size:
+                type: integer
+      responses:
+        '200':
+          description: 리뷰 조회 성공
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: array
+                example: {
+                  "missionData": [
+                    {
+                      "restaurant_id": 1,
+                      "left_date":2,
+                      "content": "미션1",
+                      "reward": "리워드1",
+                      "certification_num": "인증번호1",
+                      "progress_status": "진행중"
+                    },
+                    {
+                      "restaurant_id": 2,
+                      "left_date":3,
+                      "content": "미션2",
+                      "reward": "리워드2",
+                      "certification_num": "인증번호2",
+                      "progress_status": "진행중"
+                    }
+                  ],
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+                              
